5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1643_2711.log
== TEST (2019-04-14 21:57:59) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:31) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:10) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:05:41) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:06:06) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (f =< a):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
	
-- ERROR:
File "XXXX", line 7
    if (f =< a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:06:16) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (f < a):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:07:15) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a+b+c+d+e
if (f < a):
	z= "SUFICIENTE"
print(z)
else:
	print("INSUFICIENTE")
	
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:11:22) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:11:49) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- EXECUTION TIME:
0.130227
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:11:58) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:12:33) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a > f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:12:51) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= float(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a > f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- EXECUTION TIME:
0.13466
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:13:11) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a > f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:13:31) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a > f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- EXECUTION TIME:
0.166921
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:13:54) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:14:21) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- EXECUTION TIME:
0.162241
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:28:12) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:28:40) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "SUFICIENTE"
else:
	z= "INSUFICIENTE"
print(z)
-- EXECUTION TIME:
0.117574
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:29:43) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "suficiente".upper()
else:
	z= "insuficiente".upper()
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:30:02) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "suficiente".upper()
else:
	z= "insuficiente".upper()
print(z)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:30:17) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	z= "suficiente".upper()
else:
	z= "insuficiente".upper()
print(z)
-- EXECUTION TIME:
0.271942
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:31:05) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:31:29) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:31:44) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= b + c + d + e
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.164053
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:32:28) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a - (b + c + d + e)
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:33:38) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a - (b + c + d + e)
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.19168
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:30:23) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a - (b + c + d + e)
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:30:58) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a - ((b * c) + (d * e))
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:31:14) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= a - ((b * c) + (d * e))
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.142521
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:31:48) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= ((b * c) + (d * e))
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:32:07) 
-- CODE:
a= float(input("Valor disponivel: "))
b= int(input("Quantidades de tickets do RU: "))
c= float(input("Valor dos tickets: "))
d= int(input("Quantidade de passes de onibus: "))
e= float(input("Valor dos passes: "))
f= ((b * c) + (d * e))
if (a >= f):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.210208
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
